# ocaml-vosk

./: .gitignore  Makefile  README.md  dune-project  vosk-dev.opam  vosk-eio.opam  vosk-foreign.opam
examples/: dune  main.ml
lib/: bindings.ml  bindings.mli  dune  vosk.ml  vosk.mli  wav.ml  wav.mli
src/eio/: dune  vosk_eio.ml  vosk_eio.mli  wav.mli
src/foreign/: dune  vosk_foreign.ml
